--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,6 +3,10 @@
 - type: github
   icon: "fab fa-github"
 
+- type: itch.io
+  icon: "fa-brands fa-itch-io"
+  url: "https://sloth-man.itch.io/"
+
 # - type: twitter
 #   icon: "fa-brands fa-x-twitter"
 
@@ -13,36 +17,10 @@
 - type: medium
   icon: fa-brands fa-medium
   url: "https://medium.com/@doyun.kim3878"
+# - type: email
+#   icon: "fas fa-envelope"
+#   noblank: true # open link in current tab
 
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
-
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
-# Uncomment and complete the url below to enable more contact options
-#
-# - type: mastodon
-#   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Mastodon account page, rel="me" will be applied for verification
-#
-# - type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
-#
-# - type: stack-overflow
-#   icon: 'fab fa-stack-overflow'
-#   url:  ''                  # Fill with your stackoverflow homepage
-#
-# - type: bluesky
-#   icon: 'fa-brands fa-bluesky'
-#   url: ''                   # Fill with your Bluesky profile link
-#
-# - type: reddit
-#   icon: 'fa-brands fa-reddit'
-#   url: ''                   # Fill with your Reddit profile link
-#
-# - type: threads
-#   icon: 'fa-brands fa-threads'
-#   url: ''                   # Fill with your Threads profile link
+# - type: rss
+#   icon: "fas fa-rss"
+#   noblank: true
